moi quan he order payment shipment lineite va findAll

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 jwt.secret=123456
 jwt.accessExpiration=432100000
+shipment.freeForAmount=500000
 
