api dang ky, dang nhap, sua thong tin

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 jwt.secret=123456
 jwt.accessExpiration=432100000
 shipment.freeForAmount=500000
+spring.main.allow-circular-references=true
+
 
